--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,35 @@
-name: stockbotTOM
+name: stockbotTOM-daily
 
 on:
   schedule:
-    - # 例: .github/workflows/daily.yml
-on:
-  schedule:
-    - cron: "27 23 * * *"  # JST 8:27
-    - cron: "30 23 * * *"  # JST 8:30 バックアップ
-
-  workflow_dispatch:
+    # メイン通知：8:30 JST（= 23:30 UTC）
+    - cron: "30 23 * * *"
+    # バックアップ通知：8:27 JST（= 23:27 UTC）
+    - cron: "27 23 * * *"
+  push:
+    branches:
+      - main
 
 jobs:
-  run:
+  run-analysis:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install yfinance pandas numpy requests
 
-    - name: Run bot
-      env:
-        LINE_TOKEN: ${{ secrets.LINE_TOKEN }}
-      run: python main.py
+      - name: Run main.py
+        env:
+          LINE_TOKEN: ${{ secrets.LINE_TOKEN }}
+        run: |
+          python main.py
