--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: stockbot-scheduler
 
 on:
   schedule:
-    - cron: "27 23 * * *"
+    # JST 08:30 → UTC 23:30（前日）
     - cron: "30 23 * * *"
   workflow_dispatch:
 
@@ -14,19 +14,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-        # LINE_TOKEN を secrets から環境変数へ
       - name: Set LINE token
         run: echo "LINE_TOKEN=${{ secrets.LINE_TOKEN }}" >> $GITHUB_ENV
+
+      - name: Set WORKER_URL
+        run: echo "WORKER_URL=${{ secrets.WORKER_URL }}" >> $GITHUB_ENV
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install yfinance pandas numpy requests
+          pip install -r requirements.txt
 
       - name: Run main.py
-        run: python main.py
+        env:
+          LINE_TOKEN: ${{ secrets.LINE_TOKEN }}
+          WORKER_URL: ${{ secrets.WORKER_URL }}
+        run: |
+          python main.py
