--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,33 @@
-name: stockbot-scheduler
+name: Run stockbot
 
 on:
   schedule:
-    - cron: '30 23 * * *'   # JST 08:30 = UTC 23:30
+    # JST 08:30 実行 → UTC 23:30（前日）
+    - cron: '30 23 * * *'
   workflow_dispatch:
 
 jobs:
-  run-script:
+  build:
     runs-on: ubuntu-latest
 
-    env:
-      WORKER_URL: ${{ secrets.WORKER_URL }}
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Set LINE token
-        run: echo "LINE_TOKEN=${{ secrets.LINE_TOKEN }}" >> $GITHUB_ENV
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install yfinance pandas numpy requests
+    # 🔥 CSV読み込みエラー対策：CSVを作業ディレクトリへコピー
+    - name: Copy csv files
+      run: cp *.csv ./
 
-      - name: Run main.py
-        run: python main.py
+    - name: Run bot
+      env:
+        WORKER_URL: ${{ secrets.WORKER_URL }}
+      run: python main.py
