--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,30 @@
-name: Run stockbot
+name: stockbotTOM
 
 on:
   schedule:
-    - cron: '30 23 * * *'   # JST 08:30 実行
+    # 毎日 8:00 JST
+    - cron: "0 23 * * *"
+    # 毎日 11:40 JST
+    - cron: "40 2 * * *"
   workflow_dispatch:
 
 jobs:
-  build:
+  run-bot:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    - name: Run bot
-      env:
-        WORKER_URL: ${{ secrets.WORKER_URL }}
-      run: python main.py
+      - name: Run bot
+        env:
+          WORKER_URL: ${{ secrets.WORKER_URL }}
+        run: python main.py
