--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,64 +1,27 @@
-name: stockbotTOM Daily
+name: stockbot
 
 on:
   schedule:
-    # JST 08:15 → UTC 23:15（前日）
-    - cron: "15 23 * * *"
+    - cron: "27 23 * * *"   # JST 08:27
   workflow_dispatch:
 
 jobs:
-  daily-report:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install deps
         run: |
           pip install -r requirements.txt
 
-      - name: Build report (NO_LINE_SEND=1)
+      - name: Run script
         env:
-          NO_LINE_SEND: "1"
+          LINE_TOKEN: ${{ secrets.LINE_TOKEN }}
         run: |
-          python main.py > report.txt
-
-      # 定期実行（schedule）のときだけ 8:30 JST まで待つ
-      - name: Wait until 08:30 JST (23:30 UTC)
-        if: ${{ github.event_name == 'schedule' }}
-        run: |
-          TARGET_HOUR=23
-          TARGET_MIN=30
-          now_ts=$(date -u +%s)
-          target_ts=$(date -u -d "today ${TARGET_HOUR}:${TARGET_MIN}" +%s)
-          sleep_sec=$(( target_ts - now_ts ))
-          echo "Now:   $(date -u)"
-          echo "Target $(date -u -d @${target_ts})"
-          if [ $sleep_sec -gt 0 ]; then
-            echo "Sleep ${sleep_sec} seconds..."
-            sleep $sleep_sec
-          else:
-            echo "Target time already passed, skip sleep."
-          fi
-
-      - name: Send to LINE
-        env:
-          WORKER_URL: ${{ secrets.WORKER_URL }}
-        run: |
-          python - << 'PYCODE'
-          import os
-          from main import send_line
-          path = "report.txt"
-          if os.path.exists(path):
-              with open(path, "r", encoding="utf-8") as f:
-                  text = f.read()
-              send_line(text)
-          else:
-              print("[WARN] report.txt not found")
-          PYCODE
+          python main.py
