--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,8 @@
-name = "kgikbot"
-main = "src/index.js"
-compatibility_date = "2025-01-01"
+name = "stockbot-worker"
+main = "index.js"
+compatibility_date = "2025-12-07"
 
-[vars]
-LINE_TOKEN = ""
-LINE_USER_ID = ""
+# LINE_TOKEN / LINE_USER_ID は Cloudflare の Secrets で設定
+# 例）
+#   wrangler secret put LINE_TOKEN
+#   wrangler secret put LINE_USER_ID
