--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "stockbot-worker"
-main = "index.js"
+main = "src/index.js"
 compatibility_date = "2025-12-07"
 
 # LINE_TOKEN / LINE_USER_ID は Cloudflare の Secrets で設定
