--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: stockbot
 
 on:
   schedule:
-    - cron: "27 23 * * *"   # JST 08:27
+    - cron: "27 23 * * *" # JST 08:27
   workflow_dispatch:
 
 jobs:
@@ -10,10 +10,41 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - run: pip install -r requirements.txt
-      - run: python main.py
+
+      # Japanese font + SVG->PNG converter (fallback) for stable image output
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fonts-noto-cjk librsvg2-bin
+
+      - name: Install python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Fail fast if Pillow is missing (you can remove if you want SVG-only).
+      - name: Verify image stack
+        run: |
+          python - <<'PY'
+          import PIL
+          print('Pillow OK:', PIL.__version__)
+          PY
+          command -v rsvg-convert && rsvg-convert --version || true
+
+      - name: Run stockbot
+        run: python main.py
         env:
           WORKER_URL: ${{ secrets.WORKER_URL }}
+          REQUIRE_REPORT_PNG: "1"
+          REPORT_DEBUG: "1"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: stockbot-out
+          path: out/**
+          if-no-files-found: warn
