--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,43 +6,38 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
-      # Japanese font + SVG->PNG converter (fallback) for stable image output
-      - name: Install system dependencies
+      - name: Install system dependencies (fonts + svg convert)
         run: |
           sudo apt-get update
           sudo apt-get install -y fonts-noto-cjk librsvg2-bin
 
-      - name: Install python dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Fail fast if Pillow is missing (you can remove if you want SVG-only).
-      - name: Verify image stack
-        run: |
-          python - <<'PY'
-          import PIL
-          print('Pillow OK:', PIL.__version__)
-          PY
-          command -v rsvg-convert && rsvg-convert --version || true
+          python -m pip install -r requirements.txt
 
       - name: Run stockbot
         run: python main.py
         env:
           WORKER_URL: ${{ secrets.WORKER_URL }}
+          WORKER_AUTH_TOKEN: ${{ secrets.WORKER_AUTH_TOKEN }}
           REQUIRE_REPORT_PNG: "1"
+          REQUIRE_LINE_DELIVERY: "1"
+          LINE_SEND_IMAGE: "1"
           REPORT_DEBUG: "1"
 
-      - name: Upload artifacts
+      - name: Upload artifacts (out/)
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: stockbot-out
