--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,7 @@
 name = "stockbot-worker"
 main = "src/worker.js"
 compatibility_date = "2025-12-07"
-compatibility_flags = ["nodejs_compat"]
-
-[vars]
-PUBLIC_BASE_URL = "https://stockbot-worker.7mxhzzv8fd.workers.dev"
+workers_dev = true
 
 [[r2_buckets]]
 binding = "REPORTS"
