--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,11 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
+
+      - name: Quick sanity check (syntax/import)
+        run: |
+          python -m compileall -q .
+
       - name: Run stockbot
         run: python main.py
         env:
